# kotlin-shed-b-compiler

./: .gitignore  README.md  makefile  pom.xml  shed  shed.kak  shedc  snapshot-update
backend-amd64/: pom.xml
backend-common/: pom.xml
backend-javascript/: pom.xml
backend-llvm/: README.md  pom.xml
backend-llvm/runtime/: CMakeLists.txt  makefile  sizeof_jmp_buf.c
backend-llvm/runtime/src/: Core.Cast.c  Core.Io.c  Stdlib.Platform.Process.c  Stdlib.Platform.StringBuilder.c  Stdlib.Platform.Strings.c  effects.c  effects.h  shed.c  shed.h  shed_platform.c  shed_platform.h  shed_platform_effects.c  shed_platform_effects.h  stringbuilder.c  stringbuilder.h
backend-python/: pom.xml
backend-testing/: pom.xml
backend-wasm/: README.md  pom.xml  run-wasm.js  wasm-test-runner.js
c-bindings/: Core.Cast.h  Core.IntToString.h  Core.Io.h  Core.Options.h  Stdlib.ArgParser.h  Stdlib.Json.h  Stdlib.ListBuilder.h  Stdlib.ListLookup.h  Stdlib.Lists.h  Stdlib.Matchers.Core.h  Stdlib.Matchers.Equality.h  Stdlib.Matchers.Formatting.h  Stdlib.Matchers.Type.h  Stdlib.Matchers.h  Stdlib.Options.h  Stdlib.Platform.Process.h  Stdlib.Platform.StringBuilder.h  Stdlib.Platform.Strings.h  Stdlib.Predicates.h  Stdlib.Process.h  Stdlib.Repeat.h  Stdlib.Sequences.Unfold.h  Stdlib.Sequences.h  Stdlib.Strings.UnicodeScalars.h  Stdlib.Strings.h  Stdlib.Tests.h  StdlibTests.ArgParserTests.h  StdlibTests.JsonTests.h  StdlibTests.Main.h  StdlibTests.Matchers.EqualityTests.h  StdlibTests.Matchers.TypeTests.h  StdlibTests.MatchersTests.h  StdlibTests.OptionsTests.h  StdlibTests.StringsTests.h  (+2 more)
(+615 files in other folders)
